--- a/hover with 4 box overflow/hoverwith4box.html
+++ b/hover with 4 box overflow/hoverwith4box.html
@@ -1,8 +1,9 @@
-<!-- <!DOCTYPE html> i comment this because of some error  -->
+
+<!DOCTYPE html> 
 <html lang="en">
         <head>
-            <meta name="viewport">  
-            <meta name="viewport" content="width=device-width">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="Put your description here.">
                 <title> hover   </title>
                 <link rel="stylesheet" type="text/css" href="style.css">
@@ -14,6 +15,9 @@
             <div class="red"> 
 
                 <p class="button"> button</p>
+                <span></span>
+            </div>
+            <div class="red1">
                 <span></span>
             </div>
             <div class="red1">
