--- a/3.image and external link/image and external link.html
+++ b/3.image and external link/image and external link.html
@@ -1,18 +1,77 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Haider’s Image Practice</title>
+</head>
+<body bgcolor="lightblue">
 
-<!-- this how image is attached  -->
-<img src="img/car.jpg" title=" haider car ">
-   
-<marquee>
-         
-	<img src= "C:\Users\REHAN\Desktop\haider html\image and external link\img\game.jpg" title="haider games" height="200" width="300">
+  <!-- Main heading -->
+  <h2><center>Image and Link Practice</center></h2>
+  <hr>
 
-</marquee>
+  <!-- Single image with title -->
+  <p><b>Static Image Example:</b></p>
+  <img src="img/car.jpg" title="Haider’s Car" alt="Car Image" height="200" width="300">
+
+  <hr>
+
+  <!-- Moving image using marquee -->
+  <p><b>Moving Image Example:</b></p>
+  <marquee behavior="scroll" direction="right" scrollamount="8">
+    <img src="img/game.jpg" title="Haider’s Game" alt="Game Image" height="200" width="300">
+  </marquee>
+
+  <hr>
+
+  <!-- Clickable text (link) -->
+  <p><b>Clickable Link Example:</b></p>
+  <a href="img/game.jpg" target="_blank">
+    <center><big><b>HAIDER GAMES</b></big></center>
+  </a>
+
+  <br>
+
+  <hr>
+
+  <!-- More images -->
+  <p><b>More Images:</b></p>
+  <img src="img/courage1.jpg" alt="Courage Image" height="185" width="200">
+  <img src="img/car3.jpg" alt="Another Car Image" height="185" width="200">
+
+  <hr>
+
+  <!-- Footer -->
+  <center><small>Created by Haider Mirza © 2025</small></center>
+
+</body>
+</html>
+
+<!-- linkdlin post
+ 
+
+🚀 Day 2 of My HTML Learning Journey!
+
+Today, I learned how to display images and clickable links in HTML! 🖼️
+I explored how to:
+
+* Add single and multiple images using the `<img>` tag
+* Use the `<marquee>` tag to make images move
+* Create clickable image links that open in a new tab
+* Add simple interactivity and structure to a webpage
+
+It’s amazing to see how just a few lines of HTML can bring visuals to life! 🌐✨
+
+Next, I’ll be learning **how to style my pages using CSS** to make them look even better 🎨
+
+Let’s keep learning one tag at a time 💪
+
+#HTML #WebDevelopment #FrontendDeveloper #100DaysOfCode #CodingJourney #HaiderMirza
+
+💬 Open to feedback! Would love to hear your thoughts on my HTML image project 😊
+
+-->
 
 
 
-<a href="C:\Users\REHAN\Desktop\haider html\image and external link\img\game.jpg"> <big><b><center> HAIDER GAMES </center></b></big></a><br>
-<center><button> cancels </button></center>
-
-	<img src="img/courage1.jpg">
-	<img src="hannan/car3.jpg" height=" 185" width="200">
