--- a/4.lists/lists and types of lists.html
+++ b/4.lists/lists and types of lists.html
@@ -71,3 +71,30 @@
     </ul>
 </body>
 </html>
+
+<!-- linkdin post
+
+🚀 Day 3 of My HTML Learning Journey!
+
+Today, I explored how to create **lists** in HTML — one of the most basic yet powerful ways to organize information on a webpage. 📋✨
+
+Here’s what I learned today:
+
+* How to create **Ordered Lists (`<ol>`)** — where items appear with numbers, letters, or roman numerals.
+* How to create **Unordered Lists (`<ul>`)** — where items are marked with different bullet styles like circle or square.
+* How to use the `type` attribute to customize list markers.
+* The difference between **structured content** and simple text in web design.
+
+It’s amazing how HTML helps structure content so neatly with just a few simple tags! 💻
+
+Next, I’ll be learning how to create **tables in HTML** to display data in rows and columns 🔢
+
+Let’s keep building — one tag at a time 💪
+
+#HTML #WebDevelopment #FrontendDeveloper #100DaysOfCode #CodingJourney #HaiderMirza
+
+💬 Open to feedback! Let me know how I can improve my HTML learning posts 😊
+
+
+
+-->
