--- a/1.All tags/all tags.html
+++ b/1.All tags/all tags.html
@@ -38,11 +38,11 @@
 <hr> <!--- horizontal line -->
 <hr>
 
-<marquee> haider   </marquee>
+<!-- <marquee> haider   </marquee> -->
 
 <br>
   
-<marquee direction="up">haider</marquee>
+<!-- <marquee direction="up">haider</marquee> -->
 <marquee direction="right">haider</marquee>
 
 <hr>
@@ -62,7 +62,7 @@
 
 <hr>
 
-<p> FOR MORE INFORMATION <a href=" dffdfg"> www.haidermirza.com</a> </p>
+<p> FOR MORE INFORMATION <a href="#"> www.haidermirza.com</a> </p>
 
 <!-- space with code -->
 <p> haider &emsp;&emsp;&emsp; mirza             I study in institute of advance research   </p>
@@ -76,8 +76,26 @@
 
 <!--Detail tag -->
 <details> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita, aperiam quas nisi quia, aspernatur, necessitatibus ex dolorem maiores incidunt sit tenetur. Deserunt facere error corrupti aut, ut ullam fugiat nemo impedit consequuntur? Modi quae dolorum veniam magnam facere aperiam voluptas. Voluptatum molestias doloremque eius reiciendis non officia odio, excepturi consectetur rem sint quasi aspernatur aliquam dolores magnam quos, optio corporis quis dolorem enim! Praesentium libero accusantium vitae, distinctio vero quod nam voluptate cupiditate adipisci aspernatur maxime harum odit modi natus magni ipsam eligendi consectetur recusandae fuga omnis labore voluptas. Vitae velit facilis eveniet asperiores saepe ratione expedita corporis, consectetur quasi aperiam nisi reiciendis ducimus animi in omnis odio provident molestias veritatis nihil pariatur. Quasi explicabo expedita eos optio, suscipit repudiandae fugit beatae facilis accusamus et temporibus error aspernatur ipsa enim perferendis rem voluptas laborum repellat minus molestias assumenda, praesentium veritatis, laboriosam sint. Voluptas laboriosam inventore placeat aperiam! Voluptas iusto quia unde ratione aut, obcaecati maxime vitae assumenda blanditiis minus, eius praesentium, odit eligendi. Amet ab praesentium quae nihil suscipit minima id sunt dignissimos totam et doloremque, impedit sit exercitationem quidem facilis molestiae vero a doloribus, illo recusandae ad quod voluptate aspernatur deleniti. Hic esse, nihil velit fugit laudantium saepe reprehenderit repellat nesciunt veniam ab, eaque a ea repudiandae quasi aperiam accusamus. Quod magnam natus quisquam quibusdam ratione beatae tempora nobis iusto quidem ab reprehenderit deserunt, blanditiis, dolor mollitia adipisci eaque dicta praesentium numquam, similique unde saepe. Nulla provident repellat perspiciatis, consectetur eum aliquam odio impedit doloremque mollitia explicabo veniam dolor unde at! Dolorem, distinctio porro! Totam architecto, consequuntur alias similique nihil nobis. Quibusdam ipsa itaque voluptatum aliquid quidem impedit voluptas modi ipsum? Laboriosam dolorum ipsum aliquam asperiores earum. Deserunt quod eligendi facere eos, nulla maiores, ex impedit minima voluptatum, mollitia hic? Officia et aspernatur, ipsum quia facilis cumque expedita minima non iste perspiciatis consectetur sint in consequuntur, veritatis molestias nostrum, placeat sunt maiores eligendi? Suscipit dolorum fugiat dolore magni, quo voluptas, at soluta, eos fugit ad deleniti deserunt sapiente totam perspiciatis in sed enim ipsa quam architecto rerum. Itaque tempore impedit praesentium aliquid qui mollitia repudiandae aperiam accusamus, quae at nostrum pariatur vitae deserunt maiores saepe quibusdam blanditiis nam veritatis dolores atque quasi voluptatem officiis? Sapiente, quis sint! Doloribus autem maiores iusto recusandae minus dolorem. Cupiditate nostrum asperiores dignissimos odio atque, aspernatur eos facilis sunt doloremque, vel ipsam quaerat odit similique fugit in omnis, eum quasi deleniti voluptates aperiam! Debitis unde sed obcaecati esse iure aspernatur, deleniti reiciendis delectus expedita enim doloremque quos, odio laboriosam, ipsum fugit sunt nihil? Voluptates pariatur omnis minus libero nostrum labore sequi magni, facere minima suscipit deserunt modi dolorum iste veniam culpa rem! Id ea quae suscipit, sed delectus tenetur commodi impedit consequatur! Sint fuga voluptatem similique minima optio excepturi vitae obcaecati quidem doloribus. In modi eaque laudantium consequatur, nesciunt soluta accusantium dolores natus enim! Architecto explicabo corrupti ratione voluptatibus consequuntur voluptate animi qui sint maiores, expedita dignissimos aperiam ad assumenda culpa impedit, deserunt quis unde fugiat amet, porro facere quisquam atque dicta. Ipsam, cum.
-  <Summary> for more detail </Summary>
+  <summary> for more detail </summary>
 </details>
 
 </body>
 </html>
+
+<!-- linkdin post intro 
+ 
+🚀 Day 1 of My HTML Learning Journey!
+
+Today, I wrote my very first HTML code — exploring the basic tags like headings, bold, italic, underline, marquee, subscript, superscript, and more! 💻
+
+This small project helped me understand how a web page is actually built from scratch using simple HTML elements. It feels great to finally start my web development journey and see real results in the browser! 🌐✨
+
+Let’s grow one tag at a time 💪
+
+#HTML #WebDevelopment #CodingJourney #FrontendDeveloper #100DaysOfCode #HaiderMirza
+
+👉 Tu chaahe toh end mein ek short line add kar sakta hai jaise:
+
+> “Open to feedback! Would love to hear your suggestions to improve my code 😊”
+
+-->
