--- a/5.table/table.html
+++ b/5.table/table.html
@@ -1,10 +1,12 @@
-<html>
-
-	<head>
-		<title> table </title>
-	</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
 <body>
-
+	
 	<table border="n" style="border-collapse:collapse;">
 		<tr> 
 		        <td> name    </td>
@@ -17,13 +19,6 @@
 			<td>	576448486 </td>
 			<td> 668464864 </td>
 		</tr>
-
-
-
-
-
-
-
 
 </body>
 </html>
