--- a/5.table/table1.html
+++ b/5.table/table1.html
@@ -1,11 +1,11 @@
-<html>
-	<head><meta charset="utf-8"> 
-		<title> table pratice </title>
-	</head>
-
-
-	<body>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
 		<table border="n" height="15%" width="50%" style="border-collapse:collapse;"
 
 			
@@ -129,6 +129,5 @@
 				
 			</tr>
 		</table>
-
-	</body>
+</body>
 </html>
