--- a/6.form/haider.html
+++ b/6.form/haider.html
@@ -1,34 +1,36 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <tittle> <b> <h1>  Haider Abbas Mirza Gaming website </b> </h1> </tittle>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form2</title>
 </head>
+<body>
     <h2><b>  Gaming website </b></h2>
 
-        <b> Name: </b> <input type=text size=20><br>
+        <b> Name: </b> <input title="#" type=text size=20><br>
 
-        <b> Game category </b> <input type="text size=20"><br>
+        <b> Game category </b> <input title="#" type="text size=20"><br>
 
-        <b> Password: </b> <input type="Password"> <br>
+        <b> Password: </b> <input title="#" type="Password"> <br>
 
-        <b> Gender: </b> <input type="radio"name="gender" value="male">Male
-                     <input type="radio" name="gender" value="female">female<br>
+        <b> Gender: </b> <input title="#" type="radio"name="gender" value="male">Male
+                     <input title="#" type="radio" name="gender" value="female">female<br>
 
-       <b> Mode:</b> <input type="checkbox" name="selection"> Action
-                    <input type="checkbox" name="selection"> Adventure <br>
+       <b> Mode:</b> <input title="#" type="checkbox" name="selection"> Action
+                    <input title="#" type="checkbox" name="selection"> Adventure <br>
 
        <b> City:</b> 
-        <select>
+        <select title="#">
             <option> Bgmi </option>
             <option> GTA 5 </option>
             <option> RESIDENT EVIL 9 </option>
             <option>  god of war </option>
         </select> <br>
 
-        <b>Idea:</b> <textarea rows="3" cols="20"> </textarea> <br>
+        <b>Idea:</b> <textarea title="#" rows="3" cols="20"> </textarea> <br>
             
                 <input type="reset" value="reset">
                 <input type="submit" value="submit">
 </body>
 </html>
-
-       
