--- a/7.style and class/style and class.html
+++ b/7.style and class/style and class.html
@@ -1,16 +1,13 @@
-<html>
-	<head>
-		<title> css internal,external and inline style </title>	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>css internal,external and inline style</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
 	
-	<link rel="stylesheet" type="text/css" href="style.css"
-	
-
-
-	</head>
-	
-		<body>
-
-
 <!-- internal style -->
 	
 	<style>
@@ -44,6 +41,5 @@
 	
 <!-- external style or css style close  -->
 	
-
-	</body>
+</body>
 </html>
