--- a/10.video tag and audio,iframe/video.html
+++ b/10.video tag and audio,iframe/video.html
@@ -1,58 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Media Showcase</title>
 
-    <title> video </title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f7fb;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
 
-    <style>
-        .video{
-            display: flex;
-            justify-content: center;
-            
-        }
-    </style>
+    h1 {
+      color: #222;
+      margin-bottom: 10px;
+    }
+
+    p {
+      color: #555;
+    }
+
+    /* YouTube section */
+    .video-section {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+      margin-bottom: 40px;
+    }
+
+    iframe {
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s;
+    }
+
+    iframe:hover {
+      transform: scale(1.05);
+    }
+
+    /* Local video section */
+    .local-videos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+
+    video {
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s;
+    }
+
+    video:hover {
+      transform: scale(1.03);
+    }
+
+    /* Audio section */
+    .audio-section {
+      margin-top: 30px;
+    }
+
+    audio {
+      margin: 10px;
+    }
+  </style>
 </head>
+
 <body>
 
-<!-- how to attached yoyube video  -->
+  <h1>🎥 My Video & Audio Showcase</h1>
+  <p>Here’s what I’ve learned — embedding YouTube videos, using local videos, and adding audio files!</p>
 
-    <iframe width="250" height="250" src="https://www.youtube.com/embed/7H_W2RmzQsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>
-    
-<!-- youtubevideo with style  -->
+  <!-- 🌐 YouTube Videos -->
+  <div class="video-section">
+<div class="video-section">
+  <iframe width="300" height="200" 
+    src="https://www.youtube.com/embed/7H_W2RmzQsc" 
+    title="YouTube video 1"
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
 
-    <div class="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/LdMoYYeW9g8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen> </iframe>
-    </div>
+  <iframe width="300" height="200" 
+    src="https://www.youtube.com/embed/LdMoYYeW9g8" 
+    title="YouTube video 2"
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
+</div>
 
-<!-- controls,autoplay,mutedand loop are the attribute or features of video tag for example control attribe use to show the controls of video which is used to play the video and pause same waye autoplay loop and muted are their  -->
+  </div>
 
+  <!-- 🎞️ Local Videos -->
+  <div class="local-videos">
+    <video controls autoplay muted loop height="200" title="haider">
+      <source src="video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
 
-<video controls autoplay muted loop height="250" title="haider">
-    <source src="video.mp4" type="video/mp4"  >
-</video>
+    <video src="tu.mp4" controls autoplay muted loop height="200" title="mirza"></video>
+    <video src="video.mp4" controls poster="images/spiderman.jpg" height="200" title="poster video"></video>
+  </div>
 
-<br>
-
-<br>
-<!-- video attribe can be written within tag also like given below  -->
-
-
-<video src="video.mp4" controls autoplay muted loop height="250" title="mirza" > </video> <br>
-
-<!-- poster attribute it is like thumbnail-->
-
-<video src="video.mp4" controls poster="spiderman.jpg" height="250"> </video> <br>
-
-<!-- audio tag -->
-
-<audio src="yeah-boy-114748.mp3" controls></audio><br>
-<audio src="tu.mp4" controls></audio><br>
-
-    <!-- iframe tag -->
-    <!-- iframe is used for attached anbother website website -->
-
-    <iframe src="video.html" height="300" width="300"> </iframe> <br>
-
+  <!-- 🎵 Audio Files -->
+  <div class="audio-section">
+    <h2>🎧 Audio Section</h2>
+    <audio src="yeah-boy-114748.mp3" controls></audio>
+    <audio src="tu.mp4" controls></audio>
+  </div>
 
 </body>
 </html>
