--- a/5.table/table2.html
+++ b/5.table/table2.html
@@ -1,11 +1,12 @@
-<html>
-	<head> 
-		<title> table design prject </title>
-	</head>
-
-
-	<body>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	
 		<table border="n" height="15%" width="50%" style="border-collapse:collapse;"
 
 			
@@ -70,6 +71,5 @@
 			</tr>
 			
 		</table>
-
-	</body>
+</body>
 </html>
