--- a/6.form/form.html
+++ b/6.form/form.html
@@ -1,11 +1,12 @@
- <html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title> form1 </title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Form1</title>
 </head>
-
 <body>
-
+	
 	<form action="backend.php">
 
 		<label for="name"> NAME: </label> <br>
@@ -31,7 +32,7 @@
 		<input type="text" id="PASSWORD" placeholder="write here"> <br> <br>
 
 		<label> Date of birth: </label>
-		<input type="date"> <br> <br>
+		<input title="#" type="date"> <br> <br>
 
 		<label for="car"> choose a car </label>
 			<select id="car">
@@ -56,16 +57,16 @@
 			<br> <br> 
 
 		<label> GENDER: </label>
-		<input type="radio"  name="gender"> MALE
-		<input type="radio" name="gender" > FEMALE <br> <br>
+		<input title="#" type="radio"  name="gender"> MALE
+		<input title="#" type="radio" name="gender" > FEMALE <br> <br>
 
 		<label for="bonus"> bonus: </label> 
 		<input type="number" id="bonus"> <br> <br>
 		<label for="time"> time: </label>
 		<input type="time" id="time"> <br> <br>
 
-		are you aligible ? <input type="checkbox"> <br> <br>
-		are you aligible ? <input type="checkbox" checked> <br> <br>
+		are you aligible ? <input title="#" type="checkbox"> <br> <br>
+		are you aligible ? <input title="#" type="checkbox" checked> <br> <br>
 		
 		<label for="write"> write about yourself :</label>	
 		<br> <textarea cols="30" rows="10" id="write"> </textarea> <br>
@@ -75,10 +76,6 @@
 		
 	</form>
 
-		
-		
-	</form>
-
+	
 </body>
-
 </html>
