--- a/9.internal link/index.html
+++ b/9.internal link/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,7 +49,7 @@
 
     .gallery img {
       border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
       transition: transform 0.3s;
     }
 
@@ -69,15 +68,14 @@
     <a href="game.html">GAME</a>
   </nav>
 
-
+  <h1>Welcome to My Internal Link Page</h1>
 
   <div class="gallery">
-    <h1> This is PEAKYBLINDER PAGE </h1>
-    <img src="images\peakyblinder.jpg" alt="peakyblinder" height="200px" width="200px">
+    <img src="images/spiderman.jpg" alt="Spiderman" height="200" width="200">
+    <img src="images/cristiyano.jpg" alt="Cristiyano Ronaldo" height="200" width="200">
+    <img src="images/hitman.jpg" alt="Hitman" height="200" width="200">
+    <img src="images/peakyblinder.jpg" alt="Peaky Blinder" height="200" width="200">
   </div>
 
-
-
 </body>
-
 </html>
