--- a/9.internal link/internal link.html
+++ b/9.internal link/internal link.html
@@ -1,12 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-      <title> internal page </title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Intternal page</title>
 </head>
 
-       <a href="C:\Users\REHAN\Desktop\haider html\internal link\home.html"> HOME  </a> <br>
-       <a href="C:\Users\REHAN\Desktop\haider html\internal link\haircut.html"> haircut  </a> <br>
-       <a href="C:\Users\REHAN\Desktop\haider html\internal link\car.html">   CAR </a> <br>
-       <a href="C:\Users\REHAN\Desktop\haider html\internal link\game.html">   GAME </a> <br>
+<body>
+
+      <a href="C:\Users\REHAN\Desktop\haider html\internal link\home.html"> HOME </a> <br>
+      <a href="C:\Users\REHAN\Desktop\haider html\internal link\haircut.html"> haircut </a> <br>
+      <a href="C:\Users\REHAN\Desktop\haider html\internal link\car.html"> CAR </a> <br>
+      <a href="C:\Users\REHAN\Desktop\haider html\internal link\game.html"> GAME </a> <br>
 
 
-<h1> this is links  </h1>
+      <h1> this is links </h1>
+</body>
+
+</html>
